Implement layout structure with public and empty layouts; add routing and environment configuration

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,16 @@
   <title>Cefti</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta
+    name="description"
+    content="This is a free, open-source vitrine site for the school named : CEFTI"
+  />
+  <meta
+    name="keywords"
+    content="CEFTI, School, Technologie, Professionnel, Technique,IUC, Open Source, Showcase Website"
+  />
+  <meta name="author" content="CEFTI Team" />
+  <meta name="robots" content="Cefti, follow" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
