--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   />
   <meta name="author" content="CEFTI Team" />
   <meta name="robots" content="Cefti, follow" />
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="cefti.ico">
 </head>
 <body>
   <app-root></app-root>
